PROJECT(vkcrow)

CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
SET(CMAKE_CXX_FLAGS "-W -Wall")
SET(CMAKE_EXE_LINKER_FLAGS "-lm")

FIND_PACKAGE(Vulkan REQUIRED)
FIND_PACKAGE(GLFW3 REQUIRED)

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(CAIRO REQUIRED cairo)
PKG_CHECK_MODULES(MONO2 REQUIRED mono-2)

IF(CMAKE_BUILD_TYPE MATCHES "Debug")
	SET(CROWDLL_DIR "crow/build/Debug")
ELSE()
	SET(CROWDLL_DIR "crow/build/Release")
ENDIF()

SET(CROWDLLPATH "${CMAKE_CURRENT_SOURCE_DIR}/${CROWDLL_DIR}/")
FILE(GLOB CROWDLLFILES RELATIVE "${CROWDLLPATH}"
	"${CROWDLLPATH}/Crow.dll*")
FOREACH(CROWDLLFILE ${CROWDLLFILES})
	MESSAGE("${CROWDLLFILE}")
	ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${CROWDLLFILE}
	   COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CROWDLLPATH}/${CROWDLLFILE}" "${CMAKE_CURRENT_BINARY_DIR}/${CROWDLLFILE}"
	   COMMENT "Copying ${CROWDLLFILE} to build directory"
	   VERBATIM
	)
ENDFOREACH()
ADD_CUSTOM_TARGET(CrowDllCopy ALL DEPENDS ${CROWDLLFILES})

INCLUDE_DIRECTORIES(
	${MONO2_INCLUDE_DIRS}
	${CAIRO_INCLUDE_DIRS}
	"vkh"
)
LINK_DIRECTORIES(
	${MONO2_LIBRARY_DIRS}
	${CAIRO_LIBRARY_DIRS}
)

FILE(GLOB SOURCES src/*.c vkh/*.c)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${Vulkan_LIBRARY}
	${GLFW3_LIBRARY}
	${MONO2_LIBRARIES}
	${CAIRO_LIBRARIES}
)
