PROJECT(vkcrowtest)

CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
SET(CMAKE_CXX_FLAGS "-W -Wall")
SET(CMAKE_EXE_LINKER_FLAGS "-lm")
IF(NOT CMAKE_BUILD_TYPE)
		SET(CMAKE_BUILD_TYPE Debug)
ENDIF()
MESSAGE(STATUS "${CMAKE_BUILD_TYPE} build.")

FIND_PACKAGE(Vulkan REQUIRED)
FIND_PACKAGE(GLFW3 REQUIRED)

FILE(GLOB VKH_SRC vkh/*.c)

add_subdirectory(vkvg)

ADD_EXECUTABLE(${PROJECT_NAME} "src/test1.c" ${VKH_SRC} vkvg)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
	vkh
	vkvg/include
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${Vulkan_LIBRARY}
	${GLFW3_LIBRARY}
	vkvg
		"-lm"
)

